
v3.3.0-RC1  2023-05-11
* Make string lists and identity lists nicer to use, with new non-destructive
  functions.  These functions are all declared as API functions in order for
  them to be accessible to the adaptors as well.
  New API functions stringlist_cons, stringlist_reversed, identity_list_cons,
  identity_list_cons_copy, identity_list_reversed .
* Improve SQL concurrency.  The current change should be a proper fix to
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/133 ; I was able
  to see that problem again after upgrading to the latest Thunderbird, but now
  even that is solved.
  Solving this required a trick which is conceptually dirty, even if not complex
  in terms of code size.  No external API change.
* Add the pEp-engine-print-log script, useful to print database-destination logs
  in a compact textual format.  This simple bash script is useful for developers
  and possibly service people.
* Be consistently case-insensitive when handling header names and MIME types.
* Merge dirk's two xcode build-system commits from
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/pulls/159 .
* Remove support for _PEP_SQLITE_DEBUG; fail cleanly at compilation time if a
  user tries to build with it.

v3.2.1  2023-03-23
* DEPENDENCIES: require an official release of libpEpTransport.

v3.2.0  2023-03-23
* CI fixes, thanks to dvn:
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/pulls/147 .
* Update the API specification in api/ so that we can machine-generate more
  code.  Not finished yet, but this might help concurrent development such as
  https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/149 .
* Solve a benign but distracting intermittent test suite failure, that happens
  on the CI machine but not on positron's laptop.
  Closes https://gitea.pep.foundation/pEp.foundation/pEpEngine/issues/150 .

v3.2.0-RC27  2023-03-16
* Fix management database upgrading from versions older than 13; no API changes.